Correct Osa name to Oliver, add all of rooftop antenna season 2

--- a/project/Watertower.html
+++ b/project/Watertower.html
@@ -41,7 +41,7 @@
 
   </div>
   <div class="footer">
-    <p>: : Copyright © CALEB WOODWARD & OSA UVEINE 2021 - All rights reserved. : :</p>
+    <p>: : Copyright © CALEB WOODWARD & OLIVER SHORE 2021 - All rights reserved. : :</p>
   </div>
 
 
