--- a/project/objects on parade.html
+++ b/project/objects on parade.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="content">
-      <p> Ongoing collaboration with <a href="https://pluslorem.wiki" target="blank" rel="noreferrer noopener">Osa Uveine</a>.</p>
+      <p> Collaboration with <a href="https://olivershore.com/" target="blank" rel="noreferrer noopener">Oliver Shore</a>.</p>
       <div class="twosplit">
         <div>
           <a href="javascript:void(0);" onclick="window.open('Watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../image/water-tower/Tower 8.gif" width="90px"></img></a>
@@ -30,7 +30,7 @@
 
   </div>
   <div class="footer">
-    <p>: : Copyright © CALEB WOODWARD & OSA UVEINE 2021 - All rights reserved. : :</p>
+    <p>: : Copyright © CALEB WOODWARD & OLIVER SHORE 2021 - All rights reserved. : :</p>
 
   </div>
 
