--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" rel="noreferrer noopener" ><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
             <p > Radio-Field / 電波庭 </p>
-            <p id="wip"></p>
+            <p id="new"></p>
             <p> 2022 </p>
           </div></a>
 
