--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
             <p > Radio-Field / 電波庭 </p>
             <p id="new"></p>
             <p> 2022 </p>
