add structures page to sidebar

--- a/garments.html
+++ b/garments.html
@@ -47,6 +47,7 @@
 
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
+            <a href="structures.html"><li>Structures</li></a>
             <a href="garments.html"><li>Garments :</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
@@ -84,7 +85,7 @@
             <p>YEAR</p>
           </div>
 
-          
+
 
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Comfort-Seeking Clothing</p>
