--- a/structures.html
+++ b/structures.html
@@ -45,9 +45,9 @@
           <br>
           <ul style="list-style-type:none">
 
-            <a href="objects.html"><li>Objects :</li></a>
+            <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
-            <a href="structures.html"><li>Structures</li></a>
+            <a href="structures.html"><li>Structures :</li></a>
             <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
@@ -84,43 +84,19 @@
             <p>YEAR</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Machine Glasses </p>
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Radio-Field / 電波庭 </p>
             <p></p>
             <p> 2022 </p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Bolt-Bound Book </p>
+          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Dog's Wall</p>
             <p></p>
-            <p> 2022 </p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Window Radiometer </p>
-            <p></p>
-            <p> 2022 </p>
+            <p> 2020</p>
           </div></a>
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Window-Like Clock </p>
-            <p></p>
-            <p> 2022 </p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Jewellery</p>
-            <p></p>
-            <p> 2021</p>
-          </div></a>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Build-it Note </p>
-            <p></p>
-            <p> 2020 </p>
-          </div></a>
         </section>
         <br>
         <br>
