--- a/others.html
+++ b/others.html
@@ -47,6 +47,7 @@
 
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
+            <a href="structures.html"><li>Structures</li></a>
             <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others :</li></a>
           </ul>
@@ -55,7 +56,7 @@
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
           <a href="memo.html"><li>Memo</li></a>
-          
+
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -98,11 +99,7 @@
             <p> 2021</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Dog's Wall</p>
-            <p></p>
-            <p> 2020</p>
-          </div></a>
+
 
         </section>
 
