--- a/index-year.html
+++ b/index-year.html
@@ -78,159 +78,150 @@
     <div class="content">
 
       <div id="theList">
-        <p style="text-align: right;">Filter by: <a href="index.html">Category</a>/ <u><a href="index-year.html">Year</a></u></p>
+        <p style="text-align: right;">Filter by: <u><a href="index.html">Category</a></u>/ <a href="index-year.html">Year</a></p>
         <section>
-          <p> OBJECTS</p>
+
+          <p> 2023</p>
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>CATEGORY</p>
+            <p>YEAR</p>
+          </div>
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Rooftop Antenna    </p>
+            <p >Other </p>
+            <p> 2021 - 2023</p>
+          </div></a>
+
+
+        </section>
+        <br>
+        <br>
+
+
+        <section>
+          <p> 2022</p>
 
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
 
-
-
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p> Radio-Field / 電波庭 </p>
+            <p >Structure</p>
+            <p> 2022 </p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Glasses </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Bolt-Bound Book </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window-Like Clock </p>
-            <p></p>
+            <p>Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Jewellery</p>
-            <p></p>
+            <p>Object</p>
             <p> 2021, 2022</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Build-it Note </p>
-            <p></p>
-            <p> 2020 </p>
-          </div></a>
+
+
+
         </section>
         <br>
         <br>
         <section>
-          <p> GRAPHICS</p>
+
+          <p> 2021</p>
 
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
+          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Comfort-Seeking Clothing</p>
+            <p>Garment</p>
+            <p> 2021</p>
+          </div></a>
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Station-Searching  (MV)</p>
+            <p>Other</p>
+            <p> 2021</p>
+          </div></a>
 
+
+        </section>
+        <br>
+        <br>
+        <section>
+          <p> 2020</p>
+
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>CATEGORY</p>
+            <p>YEAR</p>
+          </div>
+          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Build-it Note </p>
+            <p>Object</p>
+            <p> 2020 </p>
+          </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
-            <p></p>
+            <p>Graphic</p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Greenline </p>
-            <p></p>
+            <p>Graphic</p>
             <p> 2020</p>
+
           </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Logo </p>
-            <p></p>
-            <p> 2019 - Ongoing</p>
-          </div></a>
-
-
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> STRUCTURES</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Radio-Field / 電波庭 </p>
-            <p id="new"></p>
-            <p> 2022 </p>
-          </div></a>
-
           <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Dog's Wall</p>
-            <p></p>
+            <p>Structure</p>
             <p> 2020</p>
           </div></a>
-
-
         </section>
         <br>
         <br>
         <section>
-          <p> GARMENTS</p>
+          <p> 2019</p>
 
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Comfort-Seeking Clothing</p>
-            <p></p>
-            <p> 2021</p>
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Logo </p>
+            <p>Graphic</p>
+            <p> 2019 - Ongoing</p>
           </div></a>
-
-
         </section>
-        <br>
-        <br>
-        <section>
-          <p> OTHERS</p>
 
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Rooftop Antenna</p>
-            <p id="updated"></p>
-            <p> 2021 - 2023</p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Station-Searching  (MV)</p>
-            <p></p>
-            <p> 2021</p>
-          </div></a>
-
-
-
-        </section>
 
 
       </div>
