osa -> oliver updates

--- a/project/Watertower.html
+++ b/project/Watertower.html
@@ -11,8 +11,8 @@
     </div>
 
     <div class="content">
-    <p>Inspired by our mutual love of landscape-scale vessels for Water, a set of animated Stickers available on <a href="https://store.line.me/stickershop/product/14349634/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://pluslorem.wiki" target="blank" rel="noopener noreferrer">Osa Uveine</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
-    <p>Towers were designed though a process of trading the 3D models for eachother to edit and add details to, Then rotated and rendered by Osa.</p>
+    <p>Inspired by our mutual love of landscape-scale vessels for Water, a set of animated Stickers available on <a href="https://store.line.me/stickershop/product/14349634/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
+    <p>Towers were designed though a process of trading the 3D models for eachother to edit and add details to, Then rotated and rendered by Oliver.</p>
     <p><br></p>
     <img src="../image/water-tower/tower overview.jpg" width="550px"></img>
     <p><br></p>
