--- a/project/breakwater.html
+++ b/project/breakwater.html
@@ -11,8 +11,8 @@
     </div>
 
     <div class="content">
-    <p>Inspired by our mutual love of Breakwater objects, a set of Stickers available on <a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://pluslorem.wiki" target="blank" rel="noopener noreferrer">Osa Uveine</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
-    <p>Modelled by Caleb Woodward, textured by Osa Uveine.</p>
+    <p>Inspired by our mutual love of Breakwater objects, a set of Stickers available on <a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
+    <p>Modelled by Caleb Woodward, textured by Oliver Shore.</p>
     <p><br></p>
     <img src="../image/breakwater/breakwater overview.jpg" width="550px"></img>
     <p><br></p>
