add illustration page and links

--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,9 @@
       <div class="headL">
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
+        <p id="info" style="color:white;">.</p>
+        <p>Language: <a href="gallery.html">en</a> /<u><a href="jp/gallery.html"> jp </a></u></p>
+
 
         <p></p>
 
@@ -83,6 +86,7 @@
         <p></p>
         <p></p>
         <p></p>
+        <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/illustration/venice zoom b.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/radiofield.png"></img></a>
         <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><img src="image/gallery/machineglasses.png"></img></a>
 
