--- a/graphics.html
+++ b/graphics.html
@@ -23,6 +23,8 @@
       <div class="headL">
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
+        <p id="info" style="color:white;">.</p>
+        <p>Language: <a href="graphics.html">en</a> /<u><a href="jp/graphics.html"> jp </a></u></p>
 
         <p></p>
 
@@ -84,6 +86,12 @@
             <p></p>
             <p>YEAR</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Illustration </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
