--- a/index-year.html
+++ b/index-year.html
@@ -26,6 +26,9 @@
 
         <p id="info">Note: best viewed on desktop</p>
 
+        <p>Language: <a href="index-year.html">en</a> /<u><a href="jp/index-year.html"> jp </a></u></p>
+
+
 
         <p></p>
 
@@ -87,6 +90,13 @@
             <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Illustration </p>
+            <p > Graphic</p>
+            <p> 2023 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Rooftop Antenna    </p>
             <p >Other </p>
