--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body class="page">
+<body class="page" lang="en">
 
   <div class="overall">
 
@@ -25,6 +25,8 @@
         <p  id="title">➝ Caleb Woodward</p>
 
         <p id="info">Note: best viewed on desktop</p>
+
+        <p>Language: <a href="index.html">en</a> /<u><a href="jp/index.html"> jp </a></u></p>
 
 
         <p></p>
@@ -138,6 +140,12 @@
             <p></p>
             <p>YEAR</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Illustration </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
