--- a/jp/artworks.html
+++ b/jp/artworks.html
@@ -23,8 +23,6 @@
       <div class="headL">
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
-        <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
 
         <p></p>
 
@@ -49,16 +47,17 @@
 
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
-            <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
-            <a href="others.html"><li>Others</li></a>
+            <a href="garments.html"><li>Garments</li></a>
+            <a href="others.html"><li>Others :</li></a>
           </ul>
           <br>
 
+
           <a href="bio.html"><li>Bio</li></a>
           <a href="cv.html"><li>CV</li></a>
-          <a href="memo.html"><li>Memo</li></a>
 
+          <a href="memo.html"><li>Memo</li></a>
+          
 
           <a href="directory.html"><li>Directory</li></a>
           <br>
@@ -75,28 +74,43 @@
 
 
     <div class="content">
+      <p>Artwork & Assorted</p>
+      <div class="threeSplit">
 
-      <div id="theList">
+        <a href="image/artwork/radiant field.png"><img src="image/artwork/radiant field.png"></img></a>
+        <a href="image/artwork/tetra.png"><img src="image/artwork/tetra.png"></img></a>
+        <a href="image/artwork/sketch 01.png"><img src="image/artwork/sketch 01.png"></img></a>
 
-        <section>
-          <p> GARMENTS</p>
+        <a href="image/artwork/spiral logo.png"><img src="image/artwork/spiral logo.png"></img></a>
+        <a href="image/artwork/debris whale.png"><img src="image/artwork/debris whale.png"></img></a>
+        <a href="image/artwork/sketch 02.png"><img src="image/artwork/sketch 02.png"></img></a>
 
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
+        <a href="image/artwork/mechanic.jpg"><img src="image/artwork/mechanic.jpg"></img></a>
+        <a href="image/artwork/malkovich.jpg"><img src="image/artwork/malkovich.jpg"></img></a>
+        <a href="image/artwork/playing.png"><img src="image/artwork/playing.png"></img></a>
+
+        <a href="image/artwork/christmas.jpg"><img src="image/artwork/christmas.jpg"></img></a>
+        <a href="image/artwork/parcel.jpg"><img src="image/artwork/parcel.jpg"></img></a>
+        <a href="image/artwork/amputee.jpg"><img src="image/artwork/amputee.jpg"></img></a>
+
+        <a href="image/artwork/radish field.png"><img src="image/artwork/radish field.png"></img></a>
+        <a href="image/artwork/sketch 03.jpg"><img src="image/artwork/sketch 03.jpg"></img></a>
+        <a href="image/artwork/rabbits.png"><img src="image/artwork/rabbits.png"></img></a>
+
+        <a href="image/artwork/rabbits 2.jpg"><img src="image/artwork/rabbits 2.jpg"></img></a>
+        <a href="image/artwork/sketch 04.jpg"><img src="image/artwork/sketch 04.jpg"></img></a>
+        <a href="image/artwork/hand.png"><img src="image/artwork/hand.png"></img></a>
+
+        <a href="image/artwork/oil station.png"><img src="image/artwork/oil station.png"></img></a>
+        <a href="image/artwork/sketch 05.jpg"><img src="image/artwork/sketch 05.jpg"></img></a>
+        <a href="image/artwork/person.png"><img src="image/artwork/person.png"></img></a>
 
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
-            <p></p>
-            <p> 2021</p>
-          </div></a>
 
 
-        </section>
+
+
 
 
 
