--- a/jp/directory.html
+++ b/jp/directory.html
@@ -24,7 +24,8 @@
         <p></p>
         <p  id="title">➝ Caleb Woodward</p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="directory.html">en</a> /<u><a href="jp/directory.html"> jp </a></u></p>
+        <p>Language: <u><a href="../directory.html">en</a></u> /<a href="../jp/directory.html"> jp </a></p>
+
 
 
         <p></p>
