--- a/jp/memo.html
+++ b/jp/memo.html
@@ -24,7 +24,7 @@
         <p></p>
         <p  id="title">➝ Caleb Woodward</p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="memo.html">en</a> /<u><a href="jp/memo.html"> jp </a></u></p>
+        <p>Language: <u><a href="../memo.html">en</a></u> /<a href="../jp/memo.html"> jp </a></p>
 
 
 
