--- a/jp/objects.html
+++ b/jp/objects.html
@@ -24,7 +24,8 @@
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../objects.html">en</a></u> /<a href="../jp/objects.html"> jp </a></p>
+
 
         <p></p>
 
@@ -47,10 +48,10 @@
           <br>
           <ul style="list-style-type:none">
 
-            <a href="objects.html"><li>Objects</li></a>
+            <a href="objects.html"><li>Objects :</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
             <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
+            <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
           <br>
@@ -77,9 +78,8 @@
     <div class="content">
 
       <div id="theList">
-
         <section>
-          <p> GARMENTS</p>
+          <p> OBJECTS</p>
 
           <div class="listSplit">
             <p>TITLE</p>
@@ -87,16 +87,46 @@
             <p>YEAR</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Machine Glasses </p>
+            <p></p>
+            <p> 2022 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Bolt-Bound Book </p>
+            <p></p>
+            <p> 2022 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Window Radiometer </p>
+            <p></p>
+            <p> 2022 </p>
+          </div></a>
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
+          <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Window-Like Clock </p>
+            <p></p>
+            <p> 2022 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Jewellery</p>
             <p></p>
             <p> 2021</p>
           </div></a>
 
 
+          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Build-it Note </p>
+            <p></p>
+            <p> 2020 </p>
+          </div></a>
         </section>
+        <br>
+        <br>
 
 
 
