--- a/jp/others.html
+++ b/jp/others.html
@@ -24,7 +24,8 @@
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../others.html">en</a></u> /<a href="../jp/others.html"> jp </a></p>
+
 
         <p></p>
 
@@ -50,8 +51,8 @@
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
             <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
-            <a href="others.html"><li>Others</li></a>
+            <a href="garments.html"><li>Garments</li></a>
+            <a href="others.html"><li>Others :</li></a>
           </ul>
           <br>
 
@@ -79,7 +80,7 @@
       <div id="theList">
 
         <section>
-          <p> GARMENTS</p>
+          <p> OTHERS</p>
 
           <div class="listSplit">
             <p>TITLE</p>
@@ -89,11 +90,18 @@
 
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Rooftop Antenna</p>
             <p></p>
             <p> 2021</p>
           </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Station-Searching  (MV)</p>
+            <p></p>
+            <p> 2021</p>
+          </div></a>
+
 
 
         </section>
