--- a/jp/structures.html
+++ b/jp/structures.html
@@ -24,7 +24,7 @@
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../structures.html">en</a></u> /<a href="../jp/structures.html"> jp </a></p>
 
         <p></p>
 
@@ -49,8 +49,8 @@
 
             <a href="objects.html"><li>Objects</li></a>
             <a href="graphics.html"><li>Graphics</li></a>
-            <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
+            <a href="structures.html"><li>Structures :</li></a>
+            <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
           <br>
@@ -77,9 +77,8 @@
     <div class="content">
 
       <div id="theList">
-
         <section>
-          <p> GARMENTS</p>
+          <p> OBJECTS</p>
 
           <div class="listSplit">
             <p>TITLE</p>
@@ -87,16 +86,22 @@
             <p>YEAR</p>
           </div>
 
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p > Radio-Field / 電波庭 </p>
             <p></p>
-            <p> 2021</p>
+            <p> 2022 </p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Dog's Wall</p>
+            <p></p>
+            <p> 2020</p>
           </div></a>
 
 
         </section>
+        <br>
+        <br>
 
 
 
