--- a/objects.html
+++ b/objects.html
@@ -23,6 +23,8 @@
       <div class="headL">
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
+        <p id="info" style="color:white;">.</p>
+        <p>Language: <a href="objects.html">en</a> /<u><a href="jp/objects.html"> jp </a></u></p>
 
         <p></p>
 
@@ -83,6 +85,12 @@
             <p></p>
             <p>YEAR</p>
           </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/perume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Machine Perfume </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Glasses </p>
