--- a/jp/garments.html
+++ b/jp/garments.html
@@ -24,7 +24,8 @@
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../garments.html">en</a></u> /<a href="../jp/garments.html"> jp </a></p>
+
 
         <p></p>
 
