--- a/jp/graphics.html
+++ b/jp/graphics.html
@@ -24,7 +24,8 @@
         <p></p>
         <p id="title">➝ Caleb Woodward </p>
         <p id="info" style="color:white;">.</p>
-        <p>Language: <a href="garments.html">en</a> /<u><a href="jp/garments.html"> jp </a></u></p>
+        <p>Language: <u><a href="../graphics.html">en</a></u> /<a href="../jp/graphics.html"> jp </a></p>
+
 
         <p></p>
 
@@ -48,9 +49,9 @@
           <ul style="list-style-type:none">
 
             <a href="objects.html"><li>Objects</li></a>
-            <a href="graphics.html"><li>Graphics</li></a>
+            <a href="graphics.html"><li>Graphics :</li></a>
             <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments :</li></a>
+            <a href="garments.html"><li>Garments</li></a>
             <a href="others.html"><li>Others</li></a>
           </ul>
           <br>
@@ -79,7 +80,7 @@
       <div id="theList">
 
         <section>
-          <p> GARMENTS</p>
+          <p> GRAPHICS</p>
 
           <div class="listSplit">
             <p>TITLE</p>
@@ -87,12 +88,22 @@
             <p>YEAR</p>
           </div>
 
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Comfort-Seeking Clothing</p>
+          <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Objects on Parade </p>
             <p></p>
-            <p> 2021</p>
+            <p> 2020</p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Greenline </p>
+            <p></p>
+            <p> 2020</p>
+          </div></a>
+
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Logo </p>
+            <p></p>
+            <p> 2019 - Ongoing</p>
           </div></a>
 
 
