--- a/jp/index-year.html
+++ b/jp/index-year.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body class="page" lang="en">
+<body class="page">
 
   <div class="overall">
 
@@ -24,9 +24,11 @@
         <p></p>
         <p  id="title">➝ Caleb Woodward</p>
 
-        <p id="info">Note: best viewed on desktop</p>
+        <p id="info" style="color:white;">.</p>
 
-        <p>Language: <a href="index.html">en</a> /<u><a href="jp/index.html"> jp </a></u></p>
+        <p>Language: <u><a href="../index-year.html">en</a></u> /<a href="../jp/index-year.html"> jp </a></p>
+
+
 
 
         <p></p>
@@ -45,28 +47,26 @@
       <div class="links">
         <br>
         <ul style="list-style-type:none">
-          <a href="index.html"><li>List :</li></a>
-          <a href="gallery.html"><li>Gallery</li></a>
+          <a href="index.html"><li>リスト :</li></a>
+          <a href="gallery.html"><li>ギャラリー</li></a>
           <br>
           <ul style="list-style-type:none">
 
-            <a href="objects.html"><li>Objects</li></a>
-            <a href="graphics.html"><li>Graphics</li></a>
-            <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments</li></a>
-            <a href="others.html"><li>Others</li></a>
+            <a href="objects.html"><li>オブジェクト</li></a>
+            <a href="graphics.html"><li>グラフィック</li></a>
+            <a href="structures.html"><li>建築物</li></a>
+            <a href="garments.html"><li>服</li></a>
+            <a href="others.html"><li>その他</li></a>
           </ul>
           <br>
 
-          <a href="bio.html"><li>Bio</li></a>
-          <a href="cv.html"><li>CV</li></a>
-          <a href="memo.html" ><li>Memo </li></a>
-
-
-          <a href="directory.html"><li>Directory</li></a>
+          <a href="bio.html"><li>プロファイル</li></a>
+          <a href="cv.html"><li>履歴書</li></a>
+          <a href="memo.html" ><li>メモ </li></a>
+          <a href="directory.html"><li>ディレクトリー</li></a>
           <br>
-          <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
-          <li id="external"><a href="mailto:info@caleb-woodward.net">email</a></li>
+          <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">インスタグラム</a></li>
+          <li id="external"><a href="mailto:info@caleb-woodward.net">メール</a></li>
 
         </ul>
 
@@ -80,170 +80,150 @@
     <div class="content">
 
       <div id="theList">
-        <p style="text-align: right;">Filter by: <a href="index.html">Category</a>/ <u><a href="index-year.html">Year</a></u></p>
+        <p style="text-align: right;">Filter by: <u><a href="index.html">Category</a></u>/ <a href="index-year.html">Year</a></p>
         <section>
-          <p> OBJECTS</p>
 
+          <p> 2023</p>
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/perume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Machine Perfume </p>
-            <p ></p>
-            <p> 2023 </p>
+          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Rooftop Antenna    </p>
+            <p >Other </p>
+            <p> 2021 - 2023</p>
           </div></a>
 
 
+        </section>
+        <br>
+        <br>
+
+
+        <section>
+          <p> 2022</p>
+
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>CATEGORY</p>
+            <p>YEAR</p>
+          </div>
+
+          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
+            <p> Radio-Field / 電波庭 </p>
+            <p >Structure</p>
+            <p> 2022 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Machine Glasses </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Bolt-Bound Book </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > Window Radiometer </p>
-            <p ></p>
+            <p >Object</p>
             <p> 2022 </p>
           </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Window-Like Clock </p>
-            <p></p>
+            <p>Object</p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p>Jewellery</p>
-            <p></p>
+            <p>Object</p>
             <p> 2021, 2022</p>
           </div></a>
 
-          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Build-it Note </p>
-            <p></p>
-            <p> 2020 </p>
-          </div></a>
+
+
+
         </section>
         <br>
         <br>
         <section>
-          <p> GRAPHICS</p>
+
+          <p> 2021</p>
 
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
-
-          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Illustration </p>
-            <p ></p>
-            <p> 2023 </p>
+          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Comfort-Seeking Clothing</p>
+            <p>Garment</p>
+            <p> 2021</p>
+          </div></a>
+          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p>Station-Searching  (MV)</p>
+            <p>Other</p>
+            <p> 2021</p>
           </div></a>
 
+
+        </section>
+        <br>
+        <br>
+        <section>
+          <p> 2020</p>
+
+          <div class="listSplit">
+            <p>TITLE</p>
+            <p>CATEGORY</p>
+            <p>YEAR</p>
+          </div>
+          <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > Build-it Note </p>
+            <p>Object</p>
+            <p> 2020 </p>
+          </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
             <p> Objects on Parade </p>
-            <p></p>
+            <p>Graphic</p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Greenline </p>
-            <p></p>
+            <p>Graphic</p>
             <p> 2020</p>
+
           </div></a>
-          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Logo </p>
-            <p></p>
-            <p> 2019 - Ongoing</p>
-          </div></a>
-
-
-        </section>
-        <br>
-        <br>
-        <section>
-          <p> STRUCTURES</p>
-
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Radio-Field / 電波庭 </p>
-            <p id="new"></p>
-            <p> 2022 </p>
-          </div></a>
-
           <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p> Dog's Wall</p>
-            <p></p>
+            <p>Structure</p>
             <p> 2020</p>
           </div></a>
-
-
         </section>
         <br>
         <br>
         <section>
-          <p> GARMENTS</p>
+          <p> 2019</p>
 
           <div class="listSplit">
             <p>TITLE</p>
-            <p></p>
+            <p>CATEGORY</p>
             <p>YEAR</p>
           </div>
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Comfort-Seeking Clothing</p>
-            <p></p>
-            <p> 2021</p>
+          <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p> Logo </p>
+            <p>Graphic</p>
+            <p> 2019 - Ongoing</p>
           </div></a>
-
-
         </section>
-        <br>
-        <br>
-        <section>
-          <p> OTHERS</p>
 
-          <div class="listSplit">
-            <p>TITLE</p>
-            <p></p>
-            <p>YEAR</p>
-          </div>
-
-
-
-          <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Rooftop Antenna</p>
-            <p id="updated"></p>
-            <p> 2021 - 2023</p>
-          </div></a>
-
-          <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Station-Searching  (MV)</p>
-            <p></p>
-            <p> 2021</p>
-          </div></a>
-
-
-
-        </section>
 
 
       </div>
