--- a/jp/index.html
+++ b/jp/index.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body class="page" lang="en">
+<body class="page" lang="jp">
 
   <div class="overall">
 
@@ -22,12 +22,11 @@
 
       <div class="headL">
         <p></p>
-        <p  id="title">➝ Caleb Woodward</p>
+        <p  id="title">➝ ケイレブ・ウッドワード</p>
+
 
         <p id="info">Note: best viewed on desktop</p>
-
-        <p>Language: <a href="index.html">en</a> /<u><a href="jp/index.html"> jp </a></u></p>
-
+        <p >Language: <u><a href="../index.html">en</a></u> /<a href="../jp/index.html"> jp </a></p>
 
         <p></p>
 
@@ -45,28 +44,26 @@
       <div class="links">
         <br>
         <ul style="list-style-type:none">
-          <a href="index.html"><li>List :</li></a>
-          <a href="gallery.html"><li>Gallery</li></a>
+          <a href="index.html"><li>リスト :</li></a>
+          <a href="gallery.html"><li>ギャラリー</li></a>
           <br>
           <ul style="list-style-type:none">
 
-            <a href="objects.html"><li>Objects</li></a>
-            <a href="graphics.html"><li>Graphics</li></a>
-            <a href="structures.html"><li>Structures</li></a>
-            <a href="garments.html"><li>Garments</li></a>
-            <a href="others.html"><li>Others</li></a>
+            <a href="objects.html"><li>オブジェクト</li></a>
+            <a href="graphics.html"><li>グラフィック</li></a>
+            <a href="structures.html"><li>建築物</li></a>
+            <a href="garments.html"><li>服</li></a>
+            <a href="others.html"><li>その他</li></a>
           </ul>
           <br>
 
-          <a href="bio.html"><li>Bio</li></a>
-          <a href="cv.html"><li>CV</li></a>
-          <a href="memo.html" ><li>Memo </li></a>
-
-
-          <a href="directory.html"><li>Directory</li></a>
+          <a href="bio.html"><li>プロファイル</li></a>
+          <a href="cv.html"><li>履歴書</li></a>
+          <a href="memo.html" ><li>メモ </li></a>
+          <a href="directory.html"><li>ディレクトリー</li></a>
           <br>
-          <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">ig</a></li>
-          <li id="external"><a href="mailto:info@caleb-woodward.net">email</a></li>
+          <li id="external"><a href="https://instagram.com/caleb_wdwrd" target="blank" rel="noreferrer noopener">インスタグラム</a></li>
+          <li id="external"><a href="mailto:info@caleb-woodward.net">メール</a></li>
 
         </ul>
 
@@ -80,57 +77,52 @@
     <div class="content">
 
       <div id="theList">
-        <p style="text-align: right;">Filter by: <a href="index.html">Category</a>/ <u><a href="index-year.html">Year</a></u></p>
+        <p style="text-align: right;">フィルター: <a href="index.html">種類</a>/ <u><a href="index-year.html">年</a></u></p>
         <section>
-          <p> OBJECTS</p>
+          <p> オブジェクト</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
+            <p>名称</p>
             <p></p>
-            <p>YEAR</p>
+            <p>年</p>
           </div>
 
 
-          <a href="javascript:void(0);" onclick="window.open('project/perume.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Machine Perfume </p>
-            <p ></p>
-            <p> 2023 </p>
-          </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/machineglasses.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Machine Glasses </p>
+            <p > マシン・メガネ </p>
             <p ></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/boltbook.html','13','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Bolt-Bound Book </p>
+            <p > 螺子で綴じた本 </p>
             <p ></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/radiometer.html','1','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Window Radiometer </p>
+            <p > 放射計の窓 </p>
             <p ></p>
             <p> 2022 </p>
           </div></a>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/windowclock.html','2','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Window-Like Clock </p>
+            <p> 窓のような時計 </p>
             <p></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/jewellery.html','3','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Jewellery</p>
+            <p>宝飾</p>
             <p></p>
             <p> 2021, 2022</p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/buildit.html','4','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Build-it Note </p>
+            <p > ビルド・イット付箋 </p>
             <p></p>
             <p> 2020 </p>
           </div></a>
@@ -138,34 +130,28 @@
         <br>
         <br>
         <section>
-          <p> GRAPHICS</p>
+          <p> グラフィック</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
+            <p>名称</p>
             <p></p>
-            <p>YEAR</p>
+            <p>年</p>
           </div>
 
-          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Illustration </p>
-            <p ></p>
-            <p> 2023 </p>
-          </div></a>
-
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Objects on Parade </p>
+            <p> 練り歩くオブジェクトたち </p>
             <p></p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/greenline.html','6','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Greenline </p>
+            <p> 緑の線 </p>
             <p></p>
             <p> 2020</p>
           </div></a>
           <a href="javascript:void(0);" onclick="window.open('project/logo.html','7','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Logo </p>
+            <p> ロゴ </p>
             <p></p>
-            <p> 2019 - Ongoing</p>
+            <p> 2019 - 今</p>
           </div></a>
 
 
@@ -173,23 +159,23 @@
         <br>
         <br>
         <section>
-          <p> STRUCTURES</p>
+          <p> 建築物</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
+            <p>名称</p>
             <p></p>
-            <p>YEAR</p>
+            <p>年</p>
           </div>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Radio-Field / 電波庭 </p>
+            <p > 電波庭 </p>
             <p id="new"></p>
             <p> 2022 </p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/dogs-wall.html','12','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p> Dog's Wall</p>
+            <p> 犬の壁</p>
             <p></p>
             <p> 2020</p>
           </div></a>
@@ -199,17 +185,17 @@
         <br>
         <br>
         <section>
-          <p> GARMENTS</p>
+          <p> 服</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
+            <p>名称</p>
             <p></p>
-            <p>YEAR</p>
+            <p>年</p>
           </div>
 
 
           <a href="javascript:void(0);" onclick="window.open('project/comfort-clothing.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p > Comfort-Seeking Clothing</p>
+            <p > 居心地を探す服</p>
             <p></p>
             <p> 2021</p>
           </div></a>
@@ -219,24 +205,24 @@
         <br>
         <br>
         <section>
-          <p> OTHERS</p>
+          <p> その他</p>
 
           <div class="listSplit">
-            <p>TITLE</p>
+            <p>名称</p>
             <p></p>
-            <p>YEAR</p>
+            <p>年</p>
           </div>
 
 
 
           <a href="javascript:void(0);" onclick="window.open('project/antenna.html','10','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Rooftop Antenna</p>
+            <p>屋上アンテナ</p>
             <p id="updated"></p>
             <p> 2021 - 2023</p>
           </div></a>
 
           <a href="javascript:void(0);" onclick="window.open('project/station-searching.html','11','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
-            <p>Station-Searching  (MV)</p>
+            <p>駅巡り  (MV)</p>
             <p></p>
             <p> 2021</p>
           </div></a>
@@ -258,7 +244,7 @@
 
 
   <script type="text/javascript">
-    var tday=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+    var tday=["日曜日","月曜日","火曜日","水曜日","木曜日","金曜日","土曜日"];
     var tmonth=["01","02","03","04","05","06","07","08","09","10","11","12"];
 
     function GetClock(){
@@ -266,10 +252,10 @@
     var nday=d.getDay(),nmonth=d.getMonth(),ndate=d.getDate(),nyear=d.getFullYear();
     var nhour=d.getHours(),nmin=d.getMinutes(),nsec=d.getSeconds(),ap;
 
-    if(nhour==0){ap=" AM";nhour=12;}
-    else if(nhour<12){ap=" AM";}
-    else if(nhour==12){ap=" PM";}
-    else if(nhour>12){ap=" PM";nhour-=12;}
+    if(nhour==0){ap=" 午前";nhour=12;}
+    else if(nhour<12){ap=" 午前";}
+    else if(nhour==12){ap=" 午後";}
+    else if(nhour>12){ap=" 午後";nhour-=12;}
 
     if(nmin<=9) nmin="0"+nmin;
     if(nsec<=9) nsec="0"+nsec;
